plugins/groovy/testdata/highlighting/duplicateNamesInTheFile/StaticImportAndClassDefinition.groovy
import static foo.Bar.Date

<error descr="Name 'Date' is already defined in file">class Date {}</error>